samples/_failures_safe/1761070778_3fe448_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5adc7ba.c:140: error: expected ‘;’, ‘,’ or ‘)’ at end of input
